# DirCompare

./: .gitignore  =10.0  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  test_cache.py  test_engine.py  test_gui.py  test_history.py  test_main.py  test_plugins.py  test_watcher.py
.claude/: settings.local.json
.forgejo/workflows/: ci.yml
DirCompare/: __init__.py  __main__.py  cache.py  engine.py  gui.py  history.py  icon.py  plugins.py  watcher.py
benchmarks/: README.md  benchmark.py
docs/: benchmarks.md  cli-reference.md  getting-started.md  gui-guide.md  index.md  plugin-api.md  scoring.md
scripts/: build_exe.py  build_icon.py  launcher.py
